# TrpgEngine

./: .gitignore  CMakeLists.txt  README.md  TODO-minimalEditor.md  TrpgEngine.sln  TrpgEngine.vcxproj  TrpgEngine.vcxproj.filters  cmake_run.ps1  imgui.ini  test.trpgproj
Projects/NewProject/: project.trpgproj
Runtime/: CMakeLists.txt  RuntimeApp.h  main.cpp
Runtime/Assets/: NewCharacter.json
Runtime/Assets/Scene/: demo_trpg_scene.entity.json
TRPGEngine/: CMakeLists.txt  imgui.ini
TRPGEngine/src/: main.cpp
TRPGEngine/src/Assets/: AudioAsset.h  Character.cpp  TextAsset.cpp  TextAsset.h
TRPGEngine/src/Core/: Application.cpp  Application.h  Application.hpp  EngineManager.cpp  EngineManager.hpp
TRPGEngine/src/Engine/: CEngine.hpp  TrpgEngine.cpp  TrpgEngine.hpp
TRPGEngine/src/Engine/Assets/: AssetBase.h  AssetImporter.cpp  AssetImporter.h  AssetRegistry.cpp  AssetRegistry.h  AssetType.cpp  AssetType.h  ImportManager.cpp  ImportManager.h
TRPGEngine/src/Engine/Component/: ComponentBase.h  ComponentRegistry.h  ComponentType.cpp  ComponentType.h
TRPGEngine/src/Engine/Component/Components/: CharacterComponent.h  ScriptComponent.h
TRPGEngine/src/Engine/Entity/: Entity.cpp  Entity.h
TRPGEngine/src/Engine/Entity/Components/: AudioComponent.h  BackgroundComponent.h  CharacterComponent.h  CutsceneComponent.h  DialogueComponent.h  ObjectComponent.h  ScriptComponent.h  TextComponent.h  TransformComponent.h
TRPGEngine/src/Engine/EntitySystem/: ComponentBase.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  ComponentType.cpp  ComponentType.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityManager.tpp  EntityTypes.hpp
TRPGEngine/src/Engine/EntitySystem/Components/: BackgroundComponent.cpp  BackgroundComponent.hpp  CharacterComponent.hpp  ChildrenComponent.hpp  ChoiceComponent.hpp  DialogueComponent.hpp  DiceRollComponent.hpp  FlowNodeComponent.hpp  GameStateComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  ParentComponent.hpp  ProjectMetaComponent.hpp  SceneMetaComponent.hpp  ScriptComponent.hpp  Transform2DComponent.hpp  TransformComponent.hpp  UIButtonComponent.hpp  UITriggerComponent.hpp
TRPGEngine/src/Engine/GameplaySystem/: FlowExecutor.cpp  FlowExecutor.hpp  GameInstance.cpp  GameInstance.hpp
TRPGEngine/src/Engine/Graphics/: ShaderUtils.cpp  ShaderUtils.hpp  TextureHelpers.cpp  TextureHelpers.hpp
TRPGEngine/src/Engine/RenderSystem/: Render3DSystem.cpp  Render3DSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SceneManager.cpp  SceneManager.hpp
TRPGEngine/src/Engine/Resources/: ResourceManager.cpp  ResourceManager.h
TRPGEngine/src/Engine/Serialization/: JsonLoader.cpp  JsonLoader.h
TRPGEngine/src/Engine/Systems/: FlowTriggerSystem.cpp  FlowTriggerSystem.hpp  LuaScriptSystem.cpp  LuaScriptSystem.hpp
TRPGEngine/src/ImGuiUtils/: ImGuiUtils.cpp  ImGuiUtils.h
TRPGEngine/src/Project/: BuildSystem.cpp  BuildSystem.h  ProjectManager.cpp  ProjectManager.h  ProjectManager.hpp  RuntimeLauncher.cpp  RuntimeLauncher.h
TRPGEngine/src/Resources/: FileAssetType.h  FileAssetType.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  ResourceUtils.cpp  ResourceUtils.hpp
TRPGEngine/src/Runtime/: DataLoader.cpp  DataLoader.h  RuntimeApp.cpp  SceneRuntime.cpp  SceneRuntime.hpp  main.cpp
TRPGEngine/src/Serialization/: JsonLoader.cpp  JsonLoader.hpp
TRPGEngine/src/UI/: EditorDockLayout.cpp  EditorFolderPanel.cpp  EditorMenu.cpp  EditorPanels.cpp  EditorStatusBar.cpp  EditorUI.cpp  EditorUI.h  EditorUI.hpp  EntityInspectorPanel.cpp  EntityInspectorPanel.hpp  IPanel.h  SceneManager.h  SceneManager.hpp
TRPGEngine/src/UI/AssetPanels/: AudioPanel.cpp  AudioPanel.h  BackgroundPanel.cpp  BackgroundPanel.h  CharacterPanel.cpp  CharacterPanel.h  CutscenePanel.cpp  CutscenePanel.h  DialoguePanel.cpp  DialoguePanel.h  ObjectPanel.cpp  ObjectPanel.h  ScriptPanel.cpp  ScriptPanel.h  ScriptPanel.hpp  TextPanel.cpp  TextPanel.h
TRPGEngine/src/UI/ComponentPanel/: RenderBackgroundPanel.hpp  RenderCharacterPanel.hpp  RenderChoicePanel.hpp  RenderDialoguePanel.hpp  RenderDicePanel.hpp  RenderFlowNodePanel.hpp  RenderModelPanel.hpp  RenderScriptPanel.hpp  RenderTransform2DPanel.hpp  RenderTransform3DPanel.hpp  RenderUIButtonPanel.hpp
TRPGEngine/src/UI/FlowPanel/: EditorRunControls.hpp  FlowCanvas.cpp  FlowCanvas.hpp  FlowEventsPanel.cpp  FlowEventsPanel.hpp  FlowPlayTester.cpp  FlowPlayTester.hpp  Flowchart.cpp  Flowchart.hpp
TRPGEngine/src/UI/ImGuiUtils/: ImGuiUtils.cpp  ImGuiUtils.h  ImGuiUtils.hpp
TRPGEngine/src/UI/MenuHelpers/: EditorMenuHelpers.cpp  EditorMenuHelpers.hpp
TRPGEngine/src/UI/Panels/: ProjectPanel.cpp  ProjectPanel.h
TRPGEngine/src/UI/ScenePanel/: SceneOverlayHUD.cpp  SceneOverlayHUD.hpp  ScenePanel.cpp  ScenePanel.h  ScenePanel.hpp
TRPGEngine/src/UI/Templates/: EntityTemplates.cpp  EntityTemplates.hpp
assets/Scenes/: entity_1.entity
include/TrpgE/Application/: TApplication.h
include/TrpgE/Core/: TCommon.h
include/TrpgE/Engine/: TrpgEngine.h
samples/TrpgExampleApplication/: TrpgExampleApplication.vcxproj  TrpgExampleApplication.vcxproj.filters
samples/TrpgExampleApplication/source/: ExampleApplication.cpp  ExampleApplication.h  main.cpp
source/TrpgE/Application/: TApplication.cpp
source/TrpgE/Engine/: CEngine.cpp  CEngine.h
src/Assets/: AudioAsset.cpp  Character.h
src/Core/: Application.cpp  Application.h  CEngine.h
src/Engine/: EngineManager.cpp  EngineManager.h  TrpgEngine.cpp  TrpgEngine.h
src/Project/: ProjectManager.cpp  ProjectManager.h  ResourceManager.cpp  ResourceManager.h
src/UI/: EditorUI.cpp  EditorUI.h
src/UI/AssetPanels/: CharactersPanel.cpp  TextPanel.cpp
src/UI/Panels/: AudioPanel.cpp  AudioPanel.h  CharactersPanel.h
src/UI/ScenePanel/: ScenePanel.cpp  ScenePanel.h
